<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp"
        tools:context=".Fragments.AboutFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textColor="#455A64"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/app_info"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/developer"
            android:textColor="#455A64"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/developers_name"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>