<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/upcomingFragment">

    <fragment
        android:id="@+id/upcomingFragment"
        android:name="com.example.easytripplanner.Fragments.UpcomingFragment"
        android:label="@string/upcoming_title"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_upcomingFragment_to_addTripFragment"
            app:destination="@id/addTripFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/upcomingFragment" />
        <action
            android:id="@+id/action_upcomingFragment_to_addNotesFragment"
            app:destination="@id/addNotesFragment"
            app:popUpTo="@id/upcomingFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.easytripplanner.Fragments.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_upcomingFragment"
            app:destination="@id/upcomingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.easytripplanner.Fragments.RegisterFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mappedFragment"
        android:name="com.example.easytripplanner.Fragments.MappedFragment"
        android:label="@string/mapped_trips"
        tools:layout="@layout/fragment_mapped" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.easytripplanner.Fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_addTripFragment"
            app:destination="@id/addTripFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTripFragment"
        android:name="com.example.easytripplanner.Fragments.AddTripFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_trip">
        <action
            android:id="@+id/action_addTripFragment_to_upcomingFragment"
            app:destination="@id/upcomingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/addTripFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="ID"
            android:defaultValue="EMPTY"
            app:argType="string" />
        <argument
            android:name="editMode"
            android:defaultValue="true"
            app:argType="boolean" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/addNotesFragment"
        android:name="com.example.easytripplanner.Fragments.AddNotesFragment"
        android:label="@string/add_notes_title"
        tools:layout="@layout/fragment_add_trip">

        <argument
            android:name="ID"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment2"
        android:name="com.example.easytripplanner.Fragments.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />
</navigation>