<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFB"
    tools:context=".Fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FBFAFB"
        android:paddingHorizontal="@dimen/_8sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/candal"
            android:text="@string/registration"
            android:textColor="#455A64"
            android:textSize="@dimen/_32ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:textAlignment="center"
            android:textColor="#151515"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#0E0E0E"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edPassword"
            app:layout_constraintEnd_toEndOf="@+id/edFullName"
            app:layout_constraintStart_toStartOf="@+id/edFullName"
            app:layout_constraintTop_toBottomOf="@+id/edFullName" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edCPassword"
            app:layout_constraintEnd_toEndOf="@+id/edEmail"
            app:layout_constraintStart_toStartOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />

        <EditText
            android:id="@+id/edCPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/confirm_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#0E0E0E"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/regSignUpBtn"
            app:layout_constraintEnd_toEndOf="@+id/edPassword"
            app:layout_constraintStart_toStartOf="@+id/edPassword"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />

        <Button
            android:id="@+id/regSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btnsignin"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/edCPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edCPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#3B5998"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/loginNav"
            app:layout_constraintEnd_toStartOf="@+id/loginNav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/regSignUpBtn"
            app:layout_constraintTop_toTopOf="@+id/loginNav"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/loginNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/login"
            android:textColor="#455A64"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/regSignUpBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/regSignUpBtn"
            tools:ignore="MissingPrefix" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>