<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_secondary_variant"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo2" />

        <LinearLayout
            android:id="@+id/rlLoginDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_secondary_variant"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/light_orange"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/usrEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@color/light_orange_disable"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10ssp"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/usrPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light_orange_disable"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/logLoginBtn"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_orange_disable"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/logSignUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/light_orange_disable"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

