<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".NewTripActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_trip"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />


        <EditText
            android:id="@+id/tripNameInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints=""
            android:background="@drawable/bg_edit_field"
            android:ems="10"
            android:hint="@string/trip_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/start_point"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tripNameInput"
            app:layout_constraintTop_toBottomOf="@+id/tripNameInput" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/end_point"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/startPointSearchView"
            app:layout_constraintTop_toBottomOf="@+id/startPointSearchView" />


        <SearchView
            android:id="@+id/startPointSearchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edit_field"
            app:layout_constraintEnd_toEndOf="@+id/tripNameInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <SearchView
            android:id="@+id/endPointSearchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edit_field"
            app:layout_constraintEnd_toEndOf="@+id/startPointSearchView"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/start_details"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/endPointSearchView"
            app:layout_constraintTop_toBottomOf="@+id/endPointSearchView" />

        <ImageButton
            android:id="@+id/calender_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:background="@color/white"
            android:contentDescription="@string/calender_image"
            android:src="@drawable/twotone_calendar_today_black_48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/timeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/time_image"
            android:src="@drawable/twotone_more_time_black_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toEndOf="@+id/calender_btn"
            app:layout_constraintTop_toTopOf="@+id/calender_btn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/repeating"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/endPointSearchView"
            app:layout_constraintTop_toBottomOf="@+id/calender_btn" />

        <Spinner
            android:id="@+id/repeating_spinner"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:backgroundTint="@color/black"
            android:entries="@array/repeating_options"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_type"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <Spinner
            android:id="@+id/trip_type"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:backgroundTint="@color/black"
            android:entries="@array/trip_options"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/btnAddNote"
            android:layout_width="65dp"
            android:layout_height="51dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_baseline_note_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toEndOf="@+id/timeBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/add_trip_btn"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/btnsignin"
            android:text="@string/add_new_trip_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trip_type"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Add_Note"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/endPointSearchView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
